# Resume-Screening-Job-Match

./: .gitignore  README.md  app.py  package.json  pyproject.toml
static/: style.css
templates/: index.html
